cambios en imagenes

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
     <div class="row">
       <div class="col-lg-12 d-flex justify-content-center">
         <ul id="portfolio-flters">
-          <li data-filter="*" class="filter-active">All</li>
+          <li data-filter="*" class="filter-active">Todos</li>
           <li data-filter=".filter-facial">Facial</li>
           <li data-filter=".filter-corporal">Corporal</li>
           <li data-filter=".filter-gluteos">Gluteos</li>
@@ -331,7 +331,7 @@
             <h4>Mesoterapia</h4>
             <p>Reducir celulitis y tejido adiposo</p>
             <div class="portfolio-links">
-              <a href="/assets/img/mesoterpia/mesoteparia-gluteo.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <a href="/assets/img/mesoterpia/mesoterapia-abdomen-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -368,12 +368,12 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-corporal">
         <div class="portfolio-wrap">
-          <img src="/assets/img/velaslim/radiofrecuencia-1.jpg" class="rounded img-fluid" alt="imagne Valaslim">
+          <img src="/assets/img/velaslim/cola-tratamiento.jpg" class="rounded img-fluid" alt="imagne Valaslim">
           <div class="portfolio-info">
             <h4>Velaslim</h4>
             <p>Reducir circunferencia corporal y la celulitis</p>
             <div class="portfolio-links">
-              <a href="/assets/img/velaslim/radiofrecuencia-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <a href="/assets/img/velaslim/cola-tratamiento.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
