--- a/pagina-interna.html
+++ b/pagina-interna.html
@@ -101,7 +101,7 @@
                         </ul>
                     </li>
                     <li><a class="nav-link scrollto" href="index.html#paquetes">Paquetes</a></li>
-                    <li><a class="nav-link scrollto" href="index.html#team">Equipo</a></li>
+                    <li><a class="nav-link scrollto" href="index.html#equipo">Equipo</a></li>
                     <li><a class="nav-link scrollto" href="index.html#contacto">Contacto</a></li>
                 </ul>
                 <!-- <div class="search">
@@ -114,8 +114,11 @@
         <!-- Termina de navbar -->
         </div>
     </header>
-
     <!-- Termina Header -->
+    
+    <!-- =======  Inicio Contenido Principal MAIN =======  -->
+    <main id="main">
+
 
     <!-- ======= Barra de descripcion ======= -->
 
@@ -136,72 +139,15 @@
 
     <!-- Termina Barra de descripcion -->
 
-    <!-- =======  Inicio Contenido Principal MAIN =======  -->
-
-    <main id="main">
-
-    <!-- Inicia Section -Detalles del Servicio -->
-    <section id="portfolio-details" class="portfolio-details">
-      <div class="container">
-
-        <div class="row gy-4">
-
-          <div class="portfolio-details-slider col-lg-8">
-            
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-              <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-              </div>
-              <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="3000">
-                  <img src="assets/img/criolipolisis/tratamientos-corporal-con-criolipolisis-perfectia-4.jpg" class="d-block w-100" alt="tratamiento criolipolisis zona abdominal">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                  <img src="assets/img/criolipolisis/que-es-coolsculpting-FB.jpg" class="d-block w-100" alt="tratamiento criolipolisis zona corporal">
-                </div>
-                <div class="carousel-item" data-bs-interval="3000">
-                  <img src="assets/img/criolipolisis/criolipolisis-ellos-4.jpg" class="d-block w-100" alt="tratamiento criolipolisis zona espalda">
-                </div>
-              </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
-            </div>
-
-          </div>
-
-          <div class="col-lg-4">
-            <div class="portfolio-info">
-              <h2>Criolipolisis</h2>
-              <ul>
-                <li><strong>Tratamiento</strong>: Corporal</li>
-                <li><strong>Método</strong>: No invasivo</li>
-                <li><strong>Resultado</strong>: A la 4ta Semana</li>
-                <li><strong>Agendar Cita</strong>: 15 3355-XXXX</li>
-              </ul>
-            </div>
-            <div class="portfolio-description">
-              <h3>Tratamiento con Crioliposis</h3>
-              <p>
-                La criolipólisis es un método que ayuda eliminar la grasa localizada mediante el enfriamiento -8 grados. Con una sesión puedes 
-                perder de 5 a 10 cm dependiendo de su metabolismo.Los resultados se podrán observar a partir de la 4ta semana posterior al tratamiento.
-              </p>
-            </div>
-          </div>
-
+    <section class="inner-page">
+        <div class="container">
+          <p>
+            Example inner page template
+          </p>
         </div>
+      </section>
 
-      </div>
-    </section>
-    <!-- Termina Section -Detalles del Servicio -->
-
+   
     </main>
     <!-- Termina Main -->
 
