--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 
       <div class="col-lg-8 mt-5 mt-lg-0">
 
-        <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+        <form action="/forms/contact.php" method="post" role="form" class="php-email-form">
           <div class="row">
             <div class="col-md-6 form-group">
               <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
@@ -642,11 +642,11 @@
           <div class="form-group mt-3">
             <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
           </div>
-          <!-- <div class="my-3">
+          <div class="my-3">
             <div class="loading">Loading</div>
             <div class="error-message"></div>
             <div class="sent-message">Tu mensaje ha sido enviado, Gracias!</div>
-          </div> -->
+          </div>
           <div class="text-center"><button type="submit">Enviar mensaje</button></div>
         </form>
 
@@ -700,7 +700,7 @@
             <li><i class="bx bx-chevron-right"></i> <a href="#nosotros">Sobre Nosotro</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="#servicios">Servicios</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="#paquetes">Paquetes</a></li>
-            <li><i class="bx bx-chevron-right"></i> <a href="#">Términos de Servico</a></li>
+            <li><i class="bx bx-chevron-right"></i> <a href="#team">Equipos</a></li>
             <li><i class="bx bx-chevron-right"></i> <a href="#">Política de Privacidad</a></li>
           </ul>
         </div>
