--- a/index.html
+++ b/index.html
@@ -87,20 +87,19 @@
                     <ul>
                         <li class="dropdown"><a href="#"><span>Faciales</span><i class="bx bxs-chevron-right arrow more-arrow"></i></a>
                             <ul>
-                               <li><a href="#peeling">Peeling</a></li>
-                               <li><a href="#dermapen">Dermapen</a></li>
+                               <li><a href="tratamiento-dermapen.html">Dermapen</a></li>
                                <li><a href="#microneedling">Microneedling</a></li>
-                               <li><a href="#mesolifting">Mesolifting</a></li>
-                               <li><a href="#exfoliacion">Exfoliacion</a></li>
-                               <li><a href="#botox">Botox</a></li>
+                               <li><a href="tratamiento-mesolifting.html">Mesolifting</a></li>
+                               <li><a href="tratamiento-limpieza-facial.html">Limpieza Facial</a></li>
+                               <li><a href="tratamiento-botox.html">Botox</a></li>
                             </ul>
                         </li>
                         <li class="dropdown"><a href="#"><span>Corporales</span><i class="bx bxs-chevron-right arrow more-arrow"></i></a>
                             <ul>
-                                <li><a href="servicios-details.html">Criolipolisis</a></li>
-                                <li><a href="#himfu">Himfu</a></li>
-                                <li><a href="#lifting">Liftin de Gluteo</a></li>
-                                <li><a href="#depilaser">Depilaser</a></li>
+                                <li><a href="tratamiento-criolipolisis.html">Criolipolisis</a></li>
+                                <li><a href="tratamiento-himfu.html">Himfu</a></li>
+                                <li><a href="tratamiento-endopeel.html">Endopeel</a></li>
+                                <li><a href="tratamiento-depilaser.html">Depilaser</a></li>
                                 <li><a href="#mesoterapia">Mesoterapia</a></li>
                                 <li><a href="#velashape">Velashape</a></li> 
                             </ul>
@@ -220,7 +219,7 @@
             <p>Tratamiento reductor de grasa adiposa</p>
             <div class="portfolio-links">
               <a href="/assets/img/criolipolisis/que-es-coolsculpting-FB.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
-              <a href="servicios-details.html" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="tratamiento-criolipolisis.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
         </div>
@@ -284,12 +283,12 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-gluteos">
         <div class="portfolio-wrap">
-          <img src="/assets/img/lifting/aumento-gluteo.jpg" class="rounded img-fluid" alt="imagen Lifting">
+          <img src="/assets/img/endopeel/aumento-gluteo.jpg" class="rounded img-fluid" alt="imagen Lifting">
           <div class="portfolio-info">
-            <h4>Lifting De Gluteos</h4>
-            <p>Estiramiento de la piel para eliminar arrugas</p>
+            <h4>Endopeel</h4>
+            <p>Tratamiento para realzar el glúteo</p>
             <div class="portfolio-links">
-              <a href="/assets/img/lifting/Aumento-de-gluteos-con-acido-hialuronico-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <a href="/assets/img/endopeel/Aumento-de-gluteos-con-acido-hialuronico-3.png" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -381,29 +380,6 @@
       </div>
 
     </div>
-
-    <!-- <div class="row porfolio-panina">
-
-      <nav aria-label="Page navigation example">
-        <ul class="pagination">
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-              <span aria-hidden="true">&laquo;</span>
-            </a>
-          </li>
-          <li class="page-item"><a class="page-link" href="#">1</a></li>
-          <li class="page-item"><a class="page-link" href="#">2</a></li>
-          <li class="page-item"><a class="page-link" href="#">3</a></li>
-          <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-              <span aria-hidden="true">&raquo;</span>
-            </a>
-          </li>
-        </ul>
-      </nav>
-
-    </div> -->
-
   </div>
 </section>
 
