--- a/tratamiento-botox.html
+++ b/tratamiento-botox.html
@@ -80,20 +80,19 @@
                         <ul>
                             <li class="dropdown"><a href="#"><span>Faciales</span><i class="bx bxs-chevron-right arrow more-arrow"></i></a>
                                 <ul>
-                                   <li><a href="#peeling">Peeling</a></li>
-                                   <li><a href="#dermapen">Dermapen</a></li>
+                                   <li><a href="tratamiento-dermapen.html">Dermapen</a></li>
                                    <li><a href="#microneedling">Microneedling</a></li>
-                                   <li><a href="#mesolifting">Mesolifting</a></li>
-                                   <li><a href="#exfoliacion">Exfoliacion</a></li>
-                                   <li><a href="#botox">Botox</a></li>
+                                   <li><a href="tratamiento-mesolifting.html">Mesolifting</a></li>
+                                   <li><a href="tratamiento-limpieza-facial.html">Limpieza Facial</a></li>
+                                   <li><a href="tratamiento-botox.html">Botóx</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown"><a href="#"><span>Corporales</span><i class="bx bxs-chevron-right arrow more-arrow"></i></a>
                                 <ul>
-                                    <li><a href="#criolipolisis">Criolipolisis</a></li>
-                                    <li><a href="#himfu">Himfu</a></li>
-                                    <li><a href="#lifting">Liftin de Gluteo</a></li>
-                                    <li><a href="#depilaser">Depilaser</a></li>
+                                    <li><a href="tratamiento-criolipolisis.html">Criolipolisis</a></li>
+                                    <li><a href="tratamiento-himfu.html">Himfu</a></li>
+                                    <li><a href="tratamiento-endopeel.html">Endopeel</a></li>
+                                    <li><a href="tratamiento-depilaser.html">Depilaser</a></li>
                                     <li><a href="#mesoterapia">Mesoterapia</a></li>
                                     <li><a href="#velashape">Velashape</a></li> 
                                 </ul>
@@ -156,13 +155,13 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="3000">
-                  <img src="assets/img/criolipolisis/tratamientos-corporal-con-criolipolisis-perfectia-4.jpg" class="d-block w-100" alt="tratamiento criolipolisis zona abdominal">
+                  <img src="assets/img/botox/botox-labios.jpg" class="d-block w-100" alt="tratamiento criolipolisis zona abdominal">
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
-                  <img src="assets/img/criolipolisis/que-es-coolsculpting-FB.jpg" class="d-block w-100" alt="tratamiento criolipolisis zona corporal">
+                  <img src="assets/img/botox/botox-frente.jpg" class="d-block w-100" alt="tratamiento criolipolisis zona corporal">
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
-                  <img src="assets/img/criolipolisis/criolipolisis-ellos-4.jpg" class="d-block w-100" alt="tratamiento criolipolisis zona espalda">
+                  <img src="assets/img/botox/botox-frente-2.jpg" class="d-block w-100" alt="tratamiento criolipolisis zona espalda">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -179,19 +178,19 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h2>Criolipolisis</h2>
+              <h2>Botóx</h2>
               <ul>
-                <li><strong>Tratamiento</strong>: Corporal</li>
+                <li><strong>Tratamiento</strong>: Facial</li>
                 <li><strong>Método</strong>: No invasivo</li>
-                <li><strong>Resultado</strong>: A la 4ta Semana</li>
+                <li><strong>Resultado</strong>: A las 24 u 48 horas</li>
                 <li><strong>Agendar Cita</strong>: 15 3355-XXXX</li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h3>Tratamiento con Crioliposis</h3>
+              <h3>Tratamiento con Botón</h3>
               <p>
-                La criolipólisis es un método que ayuda eliminar la grasa localizada mediante el enfriamiento -8 grados. Con una sesión puedes 
-                perder de 5 a 10 cm dependiendo de su metabolismo.Los resultados se podrán observar a partir de la 4ta semana posterior al tratamiento.
+                El tratamiento muy eficaz, seguro y cómodo si deseas eliminar los surcos y arrugas que han aparecido en determinadas zonas 
+                de tu rostro debido a gestos habituales de la frente y entrecejo. Con ello lo que se busca es paralizar temporalmente los músculos de la cara a través de su ingrediente activo.
               </p>
             </div>
           </div>
