se agrega paginas de servicios o tratamientos

--- a/index.html
+++ b/index.html
@@ -88,7 +88,6 @@
                         <li class="dropdown"><a href="#"><span>Faciales</span><i class="bx bxs-chevron-right arrow more-arrow"></i></a>
                             <ul>
                                <li><a href="tratamiento-dermapen.html">Dermapen</a></li>
-                               <li><a href="#microneedling">Microneedling</a></li>
                                <li><a href="tratamiento-mesolifting.html">Mesolifting</a></li>
                                <li><a href="tratamiento-limpieza-facial.html">Limpieza Facial</a></li>
                                <li><a href="tratamiento-botox.html">Botox</a></li>
@@ -100,8 +99,10 @@
                                 <li><a href="tratamiento-himfu.html">Himfu</a></li>
                                 <li><a href="tratamiento-endopeel.html">Endopeel</a></li>
                                 <li><a href="tratamiento-depilaser.html">Depilaser</a></li>
-                                <li><a href="#mesoterapia">Mesoterapia</a></li>
-                                <li><a href="#velashape">Velashape</a></li> 
+                                <li><a href="tratamiento-mesoterapia.html">Mesoterapia</a></li>
+                                <li><a href="tratamiento-velashape.htm">Velashape</a></li> 
+                                <li><a href="tratamiento-radiofrecuencia.html">Radiofrecuencia Corporal</a></li> 
+                                <li><a href="tratamiento-mio-up.html">Mio-Up</a></li> 
                             </ul>
                         </li>
                     </ul>
@@ -353,12 +354,12 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-corporal">
         <div class="portfolio-wrap">
-          <img src="/assets/img/velaslim/Radiofrecuencia-corporal.jpg" class="rounded img-fluid" alt="imagen Radiofrecuencia Corporal">
+          <img src="/assets/img/radiofrecuencia/radiofrecuencia-abdomen.jpg" class="rounded img-fluid" alt="imagen Radiofrecuencia Corporal">
           <div class="portfolio-info">
             <h4>Radiofrecuencia Corporal</h4>
             <p>Combatir la flacidez y la celulitis</p>
             <div class="portfolio-links">
-              <a href="/assets/img/velaslim/Radiofrecuencia-corporal.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <a href="/assets/img/radiofrecuencia/radiofrecuencia-abdomen.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
@@ -367,12 +368,12 @@
 
       <div class="col-lg-4 col-md-6 portfolio-item filter-corporal">
         <div class="portfolio-wrap">
-          <img src="/assets/img/velaslim/cola-tratamiento.jpg" class="rounded img-fluid" alt="imagne Valaslim">
+          <img src="/assets/img/mio-up/mio-up-gluteos.jpg" class="rounded img-fluid" alt="imagne Valaslim">
           <div class="portfolio-info">
-            <h4>Velaslim</h4>
-            <p>Reducir circunferencia corporal y la celulitis</p>
+            <h4>Mio-up</h4>
+            <p>Reducir grasa adiposa y tonificar</p>
             <div class="portfolio-links">
-              <a href="/assets/img/velaslim/cola-tratamiento.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
+              <a href="/assets/img/mio-up/mio-up-gluteos.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox"><i class="bx bx-plus"></i></a>
               <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
