--- a/tratamiento-mio-up.html
+++ b/tratamiento-mio-up.html
@@ -84,7 +84,7 @@
                                    <li><a href="#microneedling">Microneedling</a></li>
                                    <li><a href="tratamiento-mesolifting.html">Mesolifting</a></li>
                                    <li><a href="tratamiento-limpieza-facial.html">Limpieza Facial</a></li>
-                                   <li><a href="tratamiento-botox.html">Botox</a></li>
+                                   <li><a href="tratamiento-botox.html">Botóx</a></li>
                                 </ul>
                             </li>
                             <li class="dropdown"><a href="#"><span>Corporales</span><i class="bx bxs-chevron-right arrow more-arrow"></i></a>
@@ -157,13 +157,13 @@
               </div>
               <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="3000">
-                  <img src="assets/img/Depilaser/depilaser-piernas-completas.jpg" class="d-block w-100" alt="tratamiento criolipolisis zona abdominal">
+                  <img src="assets/img/mio-up/mio-up-abdominales-Divali-Clini.png" class="d-block w-100" alt="tratamiento criolipolisis zona abdominal">
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
-                  <img src="assets/img/Depilaser/laser-soprano.jpg" class="d-block w-100" alt="tratamiento criolipolisis zona corporal">
+                  <img src="assets/img/mio-up/mio-up-gluteos.jpg" class="d-block w-100" alt="tratamiento criolipolisis zona corporal">
                 </div>
                 <div class="carousel-item" data-bs-interval="3000">
-                  <img src="assets/img/Depilaser/depilacion-laser-masculina.jpg" class="d-block w-100" alt="tratamiento criolipolisis zona espalda">
+                  <img src="assets/img/mio-up/mio-up-piernas-mari-beauty.png" class="d-block w-100" alt="tratamiento criolipolisis zona espalda">
                 </div>
               </div>
               <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -180,20 +180,23 @@
 
           <div class="col-lg-4">
             <div class="portfolio-info">
-              <h2>Depilaser</h2>
+              <h2>Mio-Up</h2>
               <ul>
                 <li><strong>Tratamiento</strong>: Corporal</li>
                 <li><strong>Método</strong>: No invasivo</li>
-                <li><strong>Resultado</strong>: A partir de 3ra sesion</li>
+                <li><strong>Resultado</strong>: A la 2da sesión</li>
                 <li><strong>Agendar Cita</strong>: 15 3355-XXXX</li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h3>Tratamiento Depilacion Definitiva</h3>
+              <h3>Tratamiento con Mio-up</h3>
               <p>
-                La depilación médica láser es el procedimiento más eficaz y moderno para eliminar el vello corporal. Se trata de destruir el folículo piloso mediante la LUZ DEL LÁSER, sin dañar los poros ni la estructura de la piel, para que el vello no vuelva a salir. <br><br>
-                Depilaser utiliza la tecnología láser Soprano XL, la más moderna plataforma de depilación láser desarrollada por ALMA LASERS. Este sistema combina tecnología diodo de alta potencia CW y el modo SHR (Super Hair Removal), haciendo posible un tratamiento sumamente eficaz y virtualmente indoloro.
-                .
+                Mio-Up es un equipo de pulsos electromagnéticos focalizados que genera contracciones musculares rápidas e 
+                intensas muy por encima de lo que el ejercicio físico voluntario puede alcanzar.<br><br>
+                El campo electromagnético de alta intensidad de MIO UP penetra eficazmente la piel y el tejido graso llegando 
+                incluso a musculatura muy profunda dentro de áreas como el Abdomen, muslos, glúteos, brazos, espalda y pantorrillas 
+                sin que el paciente experimente ningún tipo de sensación, tornándola terapia muy placentera para el mismo.
+
               </p>
             </div>
           </div>
