--- a/tratamiento-dermapen.html
+++ b/tratamiento-dermapen.html
@@ -93,8 +93,10 @@
                                     <li><a href="tratamiento-himfu.html">Himfu</a></li>
                                     <li><a href="tratamiento-endopeel.html">Endopeel</a></li>
                                     <li><a href="tratamiento-depilaser.html">Depilaser</a></li>
-                                    <li><a href="#mesoterapia">Mesoterapia</a></li>
-                                    <li><a href="#velashape">Velashape</a></li> 
+                                    <li><a href="tratamiento-mesoterapia.html">Mesoterapia</a></li>
+                                    <li><a href="tratamiento-velashape.htm">Velashape</a></li> 
+                                    <li><a href="tratamiento-radiofrecuencia.html">Radiofrecuencia Corporal</a></li> 
+                                    <li><a href="tratamiento-mio-up.html">Mio-Up</a></li> 
                                 </ul>
                             </li>
                         </ul>
